--- a/styles/globals.css
+++ b/styles/globals.css
@@ -68,7 +68,7 @@
   }
 }
 
-*{
+* {
   font-family: "Roboto", sans-serif;
 }
 
@@ -83,13 +83,29 @@
 }
 
 .leftsidebuttonauto {
-  @apply mt-3 rounded-full py-2 text-[12px] font-semibold cursor-pointer hover:bg-slate-200 flex items-center pl-3
+  @apply mt-3 rounded-full xl:py-3 py-2 lg:text-[14px] text-[12px] font-semibold cursor-pointer hover:bg-slate-200 flex items-center pl-3
 }
 
 .bg-active {
-  @apply bg-slate-800 text-white mt-5 rounded-full py-2 text-[12px] font-semibold cursor-pointer flex items-center pl-3
+  @apply bg-slate-800 text-white mt-5 rounded-full xl:py-3 py-2 lg:text-[14px] text-[12px] font-semibold cursor-pointer flex items-center pl-3
 }
 
 .icon-left-bar {
-  @apply text-sm mr-2
+  @apply text-sm lg:text-lg mr-2
+}
+
+.SelectClassStyle {
+  @apply bg-white text-black text-left border hover:bg-slate-200 mt-2
+}
+
+.mobilenavbarstyles {
+  @apply mt-3 rounded-full xl:py-3 py-2 text-[14px] font-semibold cursor-pointer hover:bg-slate-200 flex items-center pl-3
+}
+
+.mobile-icon-left-bar {
+  @apply text-[20px] lg:text-lg mr-4
+}
+
+.mobile-bg-active {
+  @apply bg-slate-800 text-white mt-5 rounded-full xl:py-3 py-2 text-[14px] font-semibold cursor-pointer flex items-center pl-3
 }
